style.css
#rosmaro-logo {
  display: block;
  margin: 0 auto;
  max-width: 400px;
}

.examples-heading, 
.main-heading {
  margin-top: 4rem;
  font-size: 4rem;
  text-align: center;
  font-weight: normal;
}

.example {
  margin-top: 2em;
}

.example-step-heading {
  color: #aa7a61;
  font-size: 4em;
}

.header h2 {
  font-weight: bold;
  text-align: center;
  font-size: 1em;
  text-transform: uppercase;
}

.header nav {
  display: block;
}

a {
  color: #aa7a61;
}

a:hover {
  color: #000;
}

.footer {
  text-align: center;
}

.footer p {
  margin-top: 4em;
  color: #999;
  font-size: 1em;
}

.header .nav a {
  text-transform: uppercase;
  font-size: 1em;
}

.example-step-divider {
  margin: 6rem auto;
  border: 0;
}

.characteristics {
  margin-top: 2em;
}

.characteristics * {
  font-size: 1em;
}

.characteristics h4 {
  margin-top: 2em;
  font-weight: bold;
  text-transform: uppercase;
}

.container {
  max-width: 56rem;
}

/* Space out content a bit */
body {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.btn-primary, 
.btn-primary.disabled, 
.btn-primary:disabled, 
.btn-primary:not([disabled]):not(.disabled).active, 
.btn-primary:not([disabled]):not(.disabled):active,
.show > .btn-primary.dropdown-toggle {
  background-color: #aa7a61;
  border: none;
}

.btn-primary:hover {
  background-color: #644839;
}

@media (max-width: 56em) {

  #rosmaro-logo {
    max-width: 100%;
    padding: 0px 10px;
  }

  .examples-heading, 
  .main-heading,
  .example-step-heading {
    font-size: 1.5em;
  }

  .nav {
    margin-bottom: -100px;
  }

  .nav-item {
    text-align: right;
    width: 100%;
    display: block;
  }

}

